--- a/Viz/Untitled.ipynb
+++ b/Viz/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -67,70 +67,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "good\n"
+     ]
+    }
+   ],
    "source": [
     "l_max = 0\n",
     "u_max = 0\n",
     "v_max = 0\n",
     "for u, v, d in G.edges(keys=False, data=True):\n",
-    "    l = d['length']\n",
-    "    if l > l_max:\n",
-    "        l_max = l\n",
-    "        u_max = u\n",
-    "        v_max = v\n",
+    "    if u == 5665142932 and v == 6034517158:\n",
+    "        print('good')\n",
+    "    if u == 6034517158 and v == 5665142932:\n",
+    "        print('goo2')\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'highway': nan,\n",
-       " 'osmid': '21718762',\n",
-       " 'x': 333202.39008945506,\n",
-       " 'y': 6581205.784712386,\n",
-       " 'lon': 18.0674845,\n",
-       " 'lat': 59.3365935}"
+       " 'osmid': '1734187038',\n",
+       " 'x': 333583.238725226,\n",
+       " 'y': 6581303.567919869,\n",
+       " 'lon': 18.0740947,\n",
+       " 'lat': 59.3376208}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "G.node[u_max]"
+    "G.node[1734187038]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'highway': nan,\n",
-       " 'osmid': '1343566608',\n",
-       " 'x': 333388.1881111065,\n",
-       " 'y': 6581215.119222924,\n",
-       " 'lon': 18.0707389,\n",
-       " 'lat': 59.3367506}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "G.node[v_max]"
+    "G.remove_edge(6034517158, 5665142932)"
    ]
   },
   {
